Fix for TestConcurrentUpdateCatalog
By conforming index/constraint names to HSQL naming convention.

Also made the test results easier to interprete.